# quantum-agent-scheduler

./: .dockerignore  .editorconfig  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_COMPLETE.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION_SUMMARY.md  PROJECT_CHARTER.md  QUALITY_GATES_REPORT.md  QUANTUM_RESEARCH_IMPLEMENTATION_SUMMARY.md  README.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  SBOM.md  SECURITY.md  TERRAGON_AUTONOMOUS_EXECUTION_REPORT.md  TERRAGON_IMPLEMENTATION_SUMMARY.md  TERRAGON_SDLC_COMPLETION_SUMMARY.md  core_test.py  debug_errors.py  docker-compose.prod.yml  docker-compose.yml  enhanced_quality_gates.py  final_deployment_summary_1755922845.json  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  performance_regression.yml
.github/workflows/: ci.yml  docs.yml  performance.yml
.terragon/: README.md  autonomous-executor.py  backlog.json  config.yaml  scheduler.py  value-engine.py
config/: prometheus.yml
deployment/kubernetes/: quantum-scheduler.yaml
deployment/production/: Dockerfile  docker-compose.prod.yml
deployment/production/nginx/: nginx.conf
deployment/production/scripts/: start.sh
docs/: DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: ADR-0001-quantum-backend-abstraction.md  ADR-0002-qubo-formulation-strategy.md  ADR-0003-hybrid-solver-selection.md  README.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: ALERTING.md
docs/operations/: INCIDENT_RESPONSE.md  MONITORING.md
docs/research/: ADAPTIVE_QUBO_OPTIMIZATION.md  QUANTUM_ADVANTAGE_RESEARCH.md  QUANTUM_COMPUTING_RESEARCH_FRAMEWORK.md  RESEARCH_METHODOLOGY.md
docs/runbooks/: README.md
docs/testing/: README.md
docs/workflows/: README.md  WORKFLOW_SETUP.md  ci-cd-setup.md  github-actions-ci.yml  github-actions-release.yml
docs/workflows/templates/: container-security.yml  health-check.yml  quantum-integration.yml  release.yml  security.yml
examples/: comprehensive_research_demo.py  research_quantum_advantage_demo.py  research_validation_demo.py
fresh_quantum_env/: pyvenv.cfg
kubernetes/: production.yaml
new_quantum_env/: pyvenv.cfg
observability/: alerting-rules.yml  docker-compose.monitoring.yml  grafana-dashboards.json  grafana-datasources.yml  loki-config.yml  otel-collector-config.yml  promtail-config.yml
quantum_prod_env/: pyvenv.cfg
quantum_scheduler_env/: pyvenv.cfg
scripts/: check_compatibility.py  compare_benchmarks.py  dependency_updater.py  metrics_collector.py  repository_maintenance.py  validate_quantum_configs.py
src/quantum_scheduler/: __init__.py  cli.py  health.py
src/quantum_scheduler/backends/: __init__.py  base.py  quantum.py
src/quantum_scheduler/benchmarks/: __init__.py  scheduler_benchmark.py
src/quantum_scheduler/cloud/: __init__.py  multi_region.py  multi_region_orchestrator.py
src/quantum_scheduler/compliance/: __init__.py
src/quantum_scheduler/concurrent/: __init__.py  pool.py
src/quantum_scheduler/constraints/: __init__.py  base.py
src/quantum_scheduler/core/: __init__.py  enhanced_scheduler.py  exceptions.py  models.py  scheduler.py  validators.py
src/quantum_scheduler/i18n/: __init__.py
src/quantum_scheduler/monitoring/: __init__.py  metrics.py
src/quantum_scheduler/optimization/: __init__.py  adaptive_load_balancer.py  caching.py  distributed_scheduler.py  quantum_circuit_optimizer.py
src/quantum_scheduler/reliability/: __init__.py  circuit_breaker.py  error_correction.py  retry_policy.py
src/quantum_scheduler/research/: __init__.py  adaptive_quantum_neural_optimizer.py  adaptive_qubo_optimizer.py  automated_benchmarking.py  autonomous_performance_evolution.py  autonomous_quality_assurance.py  autonomous_quantum_advantage_evolution.py  comparative_analysis_framework.py  hybrid_communication_protocols.py  industry_benchmark_suite.py  industry_quantum_integration.py  progressive_quality_gates.py  quantum_advantage_predictor.py  quantum_annealing_optimizer.py  quantum_error_mitigation.py  quantum_meta_learning_framework.py  real_time_quantum_advantage_predictor.py  research_integration_suite.py  scalability_validation.py  statistical_validation_framework.py
src/quantum_scheduler/security/: __init__.py  sanitizer.py
tests/: __init__.py  conftest.py
tests/fixtures/: quantum_backends.json  scheduling_problems.json
tests/integration/: test_end_to_end.py  test_quantum_backends.py
tests/performance/: test_benchmarks.py  test_enhanced_performance.py
tests/research/: test_adaptive_qubo_optimizer.py  test_hybrid_communication_protocols.py  test_quantum_advantage_predictor.py  test_quantum_error_mitigation.py  test_quantum_research.py
tests/security/: test_enhanced_security.py  test_security.py
tests/unit/: test_comprehensive.py  test_enhanced_scheduler.py  test_scheduler.py
validation_env/: pyvenv.cfg
working_env/: pyvenv.cfg
